--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -145,6 +145,7 @@
             android:inputType="date"
             android:textColor="@color/black"
             android:textSize="20dp" />
+
         <TextView
             android:id="@+id/Cieudad"
             android:layout_width="match_parent"
@@ -152,7 +153,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
-            android:text="Pais"
+            android:text="Ciudad"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20dp" />
