--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -147,7 +147,7 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/Cieudad"
+            android:id="@+id/Ciudad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
