--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -147,26 +147,26 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/Ciudad"
+            android:id="@+id/pas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
-            android:text="Ciudad"
+            android:text="Contraseña"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/city"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:layout_margin="5dp"
             android:background="@color/white"
             android:ems="10"
-            android:hint="Ciudad"
-            android:inputType="text"
+            android:hint="Contraseña"
+            android:inputType="textPassword"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
