--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -72,7 +72,7 @@
             android:layout_margin="5dp"
             android:background="@color/white"
             android:ems="10"
-            android:hint="Correo"
+            android:hint="Nombre"
             android:inputType="text"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -122,6 +122,7 @@
             android:inputType="text"
             android:textColor="@color/black"
             android:textSize="20dp" />
+
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
@@ -129,7 +130,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
-            android:text="Fecha de Nacimiento"
+            android:text="Edad"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20dp" />
@@ -141,10 +142,11 @@
             android:layout_margin="5dp"
             android:background="@color/white"
             android:ems="10"
-            android:hint="Fecha de Nacimiento"
+            android:hint="Edad"
             android:inputType="date"
             android:textColor="@color/black"
             android:textSize="20dp" />
+
         <TextView
             android:id="@+id/Cieudad"
             android:layout_width="match_parent"
@@ -152,7 +154,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
-            android:text="Pais"
+            android:text="Ciudad"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20dp" />
