--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,7 +109,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#AFE198"
+            android:backgroundTint="#267331"
             android:onClick="MenuP"
             android:text="Acceder" />
 
@@ -131,9 +131,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:backgroundTint="#AFE198"
-            android:text="Crear Cuenta"
-            android:onClick="Registro"/>
+            android:backgroundTint="#267331"
+            android:onClick="Registro"
+            android:text="Crear Cuenta" />
     </LinearLayout>
 
     <TextView
