--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -162,6 +162,7 @@
         android:layout_width="142dp"
         android:layout_height="48dp"
         android:backgroundTint="#267331"
+        android:onClick="cerrar"
         android:text="Cerrar sesion"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
