--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:gravity="center_horizontal"
         android:text="NutriWatch"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
             android:gravity="center_horizontal"
             android:text="Usuario/Correo"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="20dp" />
 
         <EditText
@@ -86,7 +86,7 @@
             android:gravity="center_horizontal"
             android:text="Contraseña"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="20dp" />
 
         <EditText
@@ -111,7 +111,8 @@
             android:layout_marginBottom="20dp"
             android:backgroundTint="#AFE198"
             android:onClick="MenuP"
-            android:text="Acceder" />
+            android:text="Acceder"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/textView6"
@@ -122,7 +123,7 @@
             android:gravity="center_horizontal"
             android:text="¿No Tienes Cuenta?"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="20dp" />
 
         <Button
@@ -132,8 +133,9 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:backgroundTint="#AFE198"
+            android:onClick="Registro"
             android:text="Crear Cuenta"
-            android:onClick="Registro"/>
+            android:textColor="@color/black" />
     </LinearLayout>
 
     <TextView
