se agrego una plantilla de recomendaciones de ejercisios y agrewgaron los button y sus respectivos metodos de cada uno en todas las paginas o plantillas

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -127,7 +127,7 @@
 
 
         <TextView
-            android:id="@+id/textView0004"
+            android:id="@+id/EJER"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
