--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
         app:layout_constraintVertical_bias="0.677">
 
         <TextView
-            android:id="@+id/textView0004"
+            android:id="@+id/EJER"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
