--- a/app/src/main/res/layout/activity_recomendaciones_ej.xml
+++ b/app/src/main/res/layout/activity_recomendaciones_ej.xml
@@ -34,7 +34,7 @@
         app:layout_constraintVertical_bias="0.498">
 
         <TextView
-            android:id="@+id/textView0004"
+            android:id="@+id/EJER"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="15dp"
@@ -64,7 +64,7 @@
         app:layout_constraintVertical_bias="0.498">
 
         <TextView
-            android:id="@+id/textView0004"
+            android:id="@+id/EJER"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="15dp"
