--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -56,7 +56,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/regis"
+        android:id="@+id/REGRESAR"
         android:layout_width="323dp"
         android:layout_height="46dp"
         android:layout_marginBottom="72dp"
@@ -82,7 +82,7 @@
         app:layout_constraintVertical_bias="0.498">
 
         <TextView
-            android:id="@+id/EJER"
+            android:id="@+id/E"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="15dp"
